option java_outer_classname = "LCMultiServerAuthRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.platform.auth";

import "core/proto/common/java/PlatformResponseResult.proto";

message MultiServerAuthRes{
	required	int32					serialNumber		=1;		
	required	PlatformResponseResult	results				=2;
	repeated	ServerAuthInfo			infos				=3;
	optional	string					channelIdentify		=4;
	
	message ServerAuthInfo{
		required	string	serverIp			=1;
		required	int64	serverIdentify		=2;
	}
}
